--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 :root {
   --brand-color: #2196f3;
+  --brand-color-opacity: #2196f3e6;
   --site-color: #212121;
   --white-color: #ffffff;
   --white-color06: #ffffff99;
@@ -13,6 +14,30 @@
   --icon-base-color: #afb1b8;
   --social-backgroud-footer: #ffffff1a;
 }
+
+.skrytka{
+padding: 49px 45px 49px 24px;  
+position: absolute;
+top:0;
+background-color: var(--brand-color-opacity);
+font-size: 18px;
+line-height: 1.56;
+color: var(--white-color);
+/* or 156% */
+
+letter-spacing: 0.03em;
+transform: translate(0%, 120%);
+        transition: transform 400ms linear;
+
+}
+.skrytka-box{
+  position: relative;
+        overflow: hidden;
+}
+.portfolio-content-figure:hover .skrytka {
+        transform: translate(0, 0);
+      }
+
 
 *:hover, *:focus {
   transition-property: color, fill, background-color, box-shadow, border-radius;
@@ -53,7 +78,7 @@
   padding: 27px 90px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   width: 370px;
@@ -69,7 +94,7 @@
   padding: 27px 113px 27px 112px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   width: 370px;
@@ -85,7 +110,7 @@
   padding: 27px 94px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   width: 370px;
